classDiagram
    direction LR

    class User {
        - UUID id
        - String username
        - String email
        - String passwordHash
    }

    class Organization {
        - UUID id
        - String name
        - String slug
        - UUID ownerId
    }

    class OrgMember {
        - UUID id
        - UUID userId
        - UUID organizationId
        - OrgRole role
    }

    class Team {
        - UUID id
        - String name
        - UUID organizationId
    }

    class TeamMember {
        - UUID id
        - UUID userId
        - UUID teamId
        - String role
    }

    class Project {
        - UUID id
        - String name
        - UUID teamId
        - String k8sNamespace
    }

    class Application {
        - UUID id
        - String name
        - UUID projectId
        - String gitRepoUrl
        - String buildBranch
        - Integer containerPort
    }

    class Build {
        - UUID id
        - UUID applicationId
        - BuildStatus status
        - String imageTag
    }

    class Deployment {
        - UUID id
        - UUID applicationId
        - String version
        - DeploymentStatus status
        - String ingressUrl
    }

    class DeploymentStage {
        - UUID id
        - UUID deploymentId
        - String name
        - PipelineStatus status
    }

    %% Multiplicities based on logically defined relationships
    User "1" -- "*" OrgMember
    Organization "1" -- "*" OrgMember
    Organization "1" -- "*" Team
    Team "1" -- "*" TeamMember
    User "1" -- "*" TeamMember
    Team "1" -- "*" Project
    Project "1" -- "*" Application
    Application "1" -- "*" Build
    Application "1" -- "0..1" Deployment
    Build "1" -- "0..1" Deployment
    Deployment "1" *-- "*" DeploymentStage



